# smit-hackathon

./: README.md  pyproject.toml
backend/: agents.py  analytics.py  db.py  main.py  routes.py  student_crud_routes.py  tools.py
extra_code/: add_Students.py  add_attendance.py  attendance.json  student_data.json
