[project]
name = "campus-admin-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.117.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.12",
    "langchain-mistralai>=0.2.12",
    "langchain-ollama>=0.3.8",
    "langgraph>=0.6.7",
    "pydantic[email]>=2.11.9",
    "pymongo>=4.15.1",
    "transformers>=4.56.2",
    "uvicorn>=0.36.0",
]
